--- a/me_perdonas_en.html
+++ b/me_perdonas_en.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Me perdonas Reniela????</title>
+  <title>Me perdonas Reniela</title>
   <style>
     body {
       background-color: pink;
@@ -33,15 +33,17 @@
 </head>
 <body>
 
-  <h1>Me perdonas Reniela???</h1>
+  <h1>Me perdonas Reniela</h1>
 
   <p>number of times I apologized</p>
-  <div id="contador">0</div>
+  <div id="contador">1000</div>
 
   <button onclick="sumar()">Apologies</button>
 
   <script>
-    let contador = 0;
+    // Inicializamos el contador en 1000
+    let contador = 1000;
+
     function sumar() {
       contador++;
       document.getElementById("contador").innerText = contador;
